SLW-215 | Fixed text align for news and event page titles.

--- a/themes/custom/c2d_theme/css/5.components/components.entity.node.canonical.news.css
+++ b/themes/custom/c2d_theme/css/5.components/components.entity.node.canonical.news.css
@@ -466,6 +466,9 @@
   max-width: 774px;
   margin-left: calc(1/8 * 100%);
 }
+.block-page-title-block .block-inner h1.page-title {
+  text-align: left;
+}
 
 article {
   max-width: 139rem;
